--- a/src/App.css
+++ b/src/App.css
@@ -11,5 +11,36 @@ body {
   margin: 0;
   padding: 0;
   text-align: center;
+  overflow-x: hidden;
+}
+
+a.header-buttons{
+  all: unset; 
+  background-color: transparent;
+  font-size: 40px;
+  font-weight: bold;
+  display: inline-block;  
+  margin: 10px auto;
+  cursor: pointer;
+  color: black;
+  padding: 8px 16px;
+  text-align: center;
+  width: auto;
+  min-width: 80px;
+}
+
+.books-image{
+  display:block;
+  max-width: 100%;
+  width: 70vw;
+  height: auto;
+  max-height: 450px;
+  margin: 10px auto 0 auto;
+}
+
+@media (max-width: 600px) {
+  .books-image {
+    width: 100%;
+  }
 }
 
