--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -6,7 +6,7 @@
   text-align: center;
   position: fixed;
   top: 0;
-  z-index:1000;
+  z-index:1005;
   width: 100%;
 }
 
@@ -51,3 +51,27 @@
 .dropdown:hover .dropbtn {
   background-color: #56341a;
 }
+
+.Shoplink {
+  background-color: transparent;
+  color: white;
+  font-weight: bold;
+  display: inline-block;
+  text-align: center;
+  padding: 10px 16px; 
+  border-radius: 4px; 
+  cursor: pointer;    
+  text-decoration: none; 
+  user-select: none; 
+}
+
+.Shoplink:visited {
+  color: white; 
+}
+
+.Shoplink:hover,
+.Shoplink:visited:hover {
+  color: rgb(184, 137, 80); 
+  text-decoration: underline;
+}
+
